--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.22.0",
     "core-js": "^3.6.5",
+    "shortid": "^2.2.16",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
