--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dayjs": "^1.10.7",
     "jsonwebtoken": "^8.5.1",
     "shortid": "^2.2.16",
+    "v-calendar": "^2.4.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
