--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VUE_APP_API=https://task-mangement-api.herokuapp.com
+VUE_APP_API=https://task-management-api2.herokuapp.com
 -VUE_APP_API=http://localhost:3000
